Fix Frontend Alignment Issues (#117)
* feat(frontend, styling) meetings overview text centered

* feat(frontend, styling) faq questions aligned with explanation text

* feat(frontend, styling) aligning meeting and profile view buttons

---------

--- a/diversity-lunch-fe/src/user-interface/components/button/button.scss
+++ b/diversity-lunch-fe/src/user-interface/components/button/button.scss
@@ -27,7 +27,7 @@
   background-size: 2px 100%, 100% 2px, 2px 100% , 100% 2px;
   background-position: 0 0, 0 0, 100% 0, 0 100%;
   background-repeat: no-repeat;
-  width: 80%;
+  width: 100%;
   margin:auto;
 }
 
@@ -39,6 +39,7 @@
     background-repeat: no-repeat;
     width: 20vw;
     margin:auto;
+    width: 80%;
     margin-top: 2rem;
   }
 }
